@@ -10,6 +10,7 @@ v2.1.3
 ! imdb::episodes() was broken due to site changes. ATTENTION: with this rewrite of the method,
   the outer array no longer starts at 0 but reflects the real season number (as often requested)!
 + imdb::get_episode_details() - added "airdate" as requested by ticket:290
+! imdb::goofs() where broken due to site changes
 
 v2.1.2 (19.01.2012)
 -------------------
